# Copyright 2025 FastLabs Developers
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "examples"
publish = false

edition.workspace = true

[[example]]
name = "antipattern"
path = "src/antipattern.rs"

[[example]]
name = "basic"
path = "src/basic.rs"

[[example]]
name = "custom-layout"
path = "src/custom-layout.rs"

[[example]]
name = "downcast"
path = "src/downcast.rs"

[[example]]
name = "into-error"
path = "src/into-error.rs"

[[example]]
name = "recover-poison"
path = "src/recover-poison.rs"

[[example]]
name = "into-anyhow"
path = "src/into-anyhow.rs"

[[example]]
name = "into-std-error"
path = "src/into-std-error.rs"

[[example]]
name = "library-boundary"
path = "src/library-boundary.rs"

[package.metadata.release]
release = false

[dev-dependencies]
anyhow = { workspace = true }
derive_more = { workspace = true }
exn = { workspace = true }

[lints]
workspace = true
